Mon Mar 12 14:15:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/INET_Addr.cpp:
          Removed not needed return

Mon Mar 12 13:54:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Don't run bug 2800 regression tests in a ST configuration

Mon Mar 12 13:12:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.3.h:
        * ace/config-vxworks6.4.h:
          Only when building a static rtp we enable aio by default. For
          building shared we need an optional library, see the file below
          how to enable this

        * include/makeinclude/platform_vxworks6.3.GNU:
          If you build rtp with shared library and want to use aio then you
          need to build the custom AioPx library first, then add aio=1
          to your platform_macros.GNU file to enable aio in ACE and link
          the needed additonal library

Mon Mar 12 12:35:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.3.h:
        * ace/config-vxworks6.4.h:
          VxWorks 6.4 does deliver strings.h in kernel mode and strcasecmp/
          strncasecmp can't be used in rtp mode, but can be used in kernel
          mode

Mon Mar 12 10:51:38 UTC 2007  Steve Huston  <shuston@riverace.com>

        * bin/MakeProjectCreator/config/vc8nmake.mpb: Added /D for
          _CRT_SECURE_NO_DEPRECATE and _SCL_SECURE_NO_WARNINGS to silence
          those compile warnings; added /wd4290 to silence the warnings
          "C++ exception specification ignored except to indicate a function
          is not __declspec(nothrow)". Note that the latter warning can also
          be remedied by using ACE_THROW_SPEC; this has been done for ACE
          but not in TAO.

Mon Mar 12 01:31:16 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * examples/DLL/test_dll.cpp:

          This example was not working under Windows XP when compiled with